# learningNotes-of-robotVision

./: C.md  README.md  others.md
CMake/: CMakeLists.txt  CMakeLists书写.md
opencv_notes/CH0 其他补充知识/: CPlusPlus.md
opencv_notes/CH2 简单操作/: 显示图片.md
opencv_notes/CH3 图像和大型数据类型——cvMat类/: 3.1 创建一个数组.md  3.2 获取或访问数组元素.md  reference.md
opencv_notes/CH5 图像、视频和数据文件/: 5.2 视频处理.md  5.3 数据文件处理.md
opencv_notes/opencv的简单应用/CH10 相机标定/: reference.md  其他.md  标定基础md
